welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:68: error: Missing closing brace `}' assumed here
} 
^